--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gubbinstesting",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://amymrogers.github.io/gubbinstesting",
+  "homepage": "https://testing.gubbins.studio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
